--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
 # Core dependencies
 requests>=2.28.0
 
+# API Server dependencies
+fastapi>=0.100.0
+uvicorn>=0.23.0
+
+# MCP Server dependency (requires Python 3.10+)
+# Note: Only needed if using mudrex.mcp_server
+# The API server (mudrex.api_server) does not require mcp
+# Dockerfile uses Python 3.10+ to support this
+mcp>=0.1.0
+
 # Optional: for async examples
 # asyncio is built-in for Python 3.8+
 
@@ -12,6 +22,3 @@ requests>=2.28.0
 # mypy>=1.0.0
 # types-requests>=2.28.0
 # ruff>=0.1.0
-fastapi>=0.100.0
-uvicorn>=0.23.0
-mcp>=0.1.0
